--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+  body {
+            font-family: Arial, sans-serif;
+        }
+        
+        .questions {
+            background-color: #f8fffe;
+            margin-top: 20px;
+            padding: 15px;
+            max-width: 600px;
+            border-left: 8px solid green;
+        }
